trunk/Archive2/2c/bca32bda4791c0/output
+ clang++ -std=c++11 -O3 -Wall -pedantic -pthread main.cpp
main.cpp:1:1: error: unknown type name 'string'
string code(string worth, int decalage) {
^
main.cpp:1:13: error: unknown type name 'string'
string code(string worth, int decalage) {
            ^
main.cpp:2:5: error: unknown type name 'string'
    string test = "";
    ^
3 errors generated.
